--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "model.js",
   "private": true,
   "scripts": {
-    "test": "mocha model.js"
+    "test": "mocha -w"
   },
   "author": "Jason Seminara <js@ga.co>",
   "license": "ISC",
